Fix contacts table border on mobile

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -2,3 +2,7 @@ body {
 	background: #007991;
 	background: linear-gradient(to right, #107d9b, #6ae5fd);
 }
+
+.table-bordered {
+	border: none;
+}
